(fix) add left padding to service name on mobile

--- a/app/assets/stylesheets/components/lbh-header.scss
+++ b/app/assets/stylesheets/components/lbh-header.scss
@@ -43,5 +43,12 @@ header {
   &.lbh-header__container {
     background-color: $lbh-dark-grey;
     border-bottom: none;
+
+    @include govuk-media-query($until: desktop) {
+       .govuk-header__content {
+         padding-left: 1.5em;
+       }
+    }
+
   }
 }
